Fixed submit button mobile~=

--- a/source/sass/blocks/contact-us.scss
+++ b/source/sass/blocks/contact-us.scss
@@ -116,7 +116,11 @@
 
   @include vp-1023 {
     margin: 0 auto 0 0;
-    flex: 1 1 auto;
+    flex: 1 1 265px;
+  }
+
+  @include vp-767 {
+    flex: 1 1 100%;
   }
 }
 
@@ -145,5 +149,5 @@
 .contact-us--modal .custom-toggle {
   margin-top: 13px;
   margin-left: 4px;
-  flex: 1 1 auto;
+  flex: 1 0 auto;
 }
